# GiroPolyFit

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  basic_types.h  common.h  main.cpp  test.cpp  test.h
code/basic/: CMakeLists.txt  attribute_manager.h  attribute_store.h  basic_types.cpp  basic_types.h  color.h  common.h  rat.h  raw_attribute_store.h  record_id.h  simple_attribute.h  utils.cpp  utils.h
code/debugger/: CMakeLists.txt  basic.cpp  basic.h  logger.cpp  logger.h  progress.cpp  progress.h
code/math/: CMakeLists.txt  box.h  line.h  math_types.cpp  math_types.h  plane.h  vec.h
code/model/: CMakeLists.txt  io.h  map.cpp  map.h  map_attribute.h  map_builder.cpp  map_builder.h  map_cell.cpp  map_cell.h  map_io.h  map_serializer.cpp  map_serializer.h  point_set.cpp  point_set.h  point_set_io.cpp  point_set_io.h  point_set_serializer.cpp  point_set_serializer.h  pointset.h  vector_group.h  vertex_group.h
code/scene/: CMakeLists.txt  camera.cpp  camera.h  grid.cpp  grid.h  openglfunc.h  point_set_renderer.cpp  point_set_renderer.h  style.h
code/ui/: CMakeLists.txt  canvas.cpp  canvas.h
test/: CMakeLists.txt  pcltest.cpp  point_set_io_test.cpp  point_set_renderer_test.cpp  pointset.vg  pointset_output.vg  rat_test.cpp
